<resources>
    <string name="app_name">UserProject</string>
    <string name="user_home">الرئيسية</string>
    <string name="user_orders">الطلبات</string>
    <string name="user_location">الموقع</string>
    <string name="user_settings">الإعدادات</string>
    <string name="search">البحث</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="cart">السلة</string>

    <string name="title_activity_maps">Map</string>

    <string name="login">تسجيل الدخول</string>
    <string name="email">البريد الالكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="haventaccount">"لا تمتلك حساب ؟ "</string>
    <string name="clickhere">اضغط هنا</string>
    <string name="orloginby">أو سجل من خلال</string>
    <string name="havent_account">"لا تمتلك حساب ؟ "</string>

    <string name="createaccount">انشاء حساب جديد</string>
    <string name="username">اسم المستخدم</string>
    <string name="phonenumber">رقم الهاتف</string>
    <string name="address">العنوان</string>
    <string name="accounttype">نوع الحساب</string>
    <string name="register">انشاء الحساب</string>

    <string name="farmer_home">الرئيسية</string>
    <string name="farmer_orders">الطلبات</string>
    <string name="farmer_location">الموقع</string>
    <string name="farmer_settings">الإعدادات</string>
    <string name="farmer_dashboard">الإحصائيات</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clickOnImage">اضغط على الصورة</string>
    <string name="productName">اسم المنتج</string>
    <string name="productPrice">سعر المنتج</string>
    <string name="productDesc">وصف المنتج</string>
    <string name="Addproduct">أضف المنتج</string>
    <string name="ProductType">نوع المنتج</string>

    <string name="saveproduct">حفظ </string>


</resources>