<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/user_home"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/bottom_nav_order"
        android:icon="@drawable/ic_orders"
        android:title="@string/user_orders"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/bottom_nav_cart"
        android:title=""
        />

<!--    <item-->
<!--        android:id="@+id/bottom_nav_cart"-->
<!--        android:icon="@drawable/ic_shopping_cart"-->
<!--        android:title="@string/cart"-->
<!--        app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/bottom_nav_location"
        android:icon="@drawable/ic_location"
        android:title="@string/user_location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bottom_nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/user_settings"
        app:showAsAction="ifRoom" />
</menu>