<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layoutDirection="rtl"
    tools:context=".activities.AddProductActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        android:elevation="@dimen/_4sdp"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_6sdp"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/product_iv"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_add_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/jf"
                android:gravity="center"
                android:text="@string/clickOnImage"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addProduct_et_productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/productName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:fontFamily="@font/jf"
                    android:inputType="text"
                    android:textSize="@dimen/_18ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addProduct_et_productPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/productPrice"
                app:helperText="سعر الكيلو بالشيكل">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:fontFamily="@font/jf"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/_18ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addProduct_et_productDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/productDesc">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:fontFamily="@font/jf"
                    android:inputType="text"
                    android:textSize="@dimen/_18ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:endIconMode="dropdown_menu"
                android:hint="@string/ProductType">
                <AutoCompleteTextView
                    android:id="@+id/addproduct_et_productType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:fontFamily="@font/jf"
                    android:inputType="text"
                    android:textSize="@dimen/_18ssp" />
            </com.google.android.material.textfield.TextInputLayout>

<!--           <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/textInputLayout_gender"-->
<!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:hint="نوع المنتج"-->
<!--                app:endIconMode="dropdown_menu">-->
<!--            <AutoCompleteTextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content" />-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <Button
                android:id="@+id/addProduct_add"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/jf"
                android:text="@string/Addproduct"
                android:textSize="@dimen/_18ssp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>